--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </div>
   </section>
   <!-- card section start -->
+ <div class="cardtry">
   <div class="ecard">
     <div class="card">
       <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
@@ -104,15 +105,92 @@
       </div>
     </div>
   </div>
- 
-  <!-- this is a footer -->
-   <footer>
-    <div class="footer">
-      <div class="footer">
-        <h4></h4>
+
+  <div class="ecard">
+    <div class="card">
+      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
+      <div class="product-details">
+        <h2 class="product-title">Product Name</h2>
+        <p class="product-discription">This is a short description of the product.
+          It's a great product that solves many problems</p>
+        <p class="product-price">$63.99</p>
+        <a href="#" class="buy-button">Buy Now</a>
       </div>
     </div>
-   </footer>
+  </div>
+  <div class="ecard">
+    <div class="card">
+      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
+      <div class="product-details">
+        <h2 class="product-title">Product Name</h2>
+        <p class="product-discription">This is a short description of the product.
+          It's a great product that solves many problems</p>
+        <p class="product-price">$63.99</p>
+        <a href="#" class="buy-button">Buy Now</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="ecard">
+    <div class="card">
+      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
+      <div class="product-details">
+        <h2 class="product-title">Product Name</h2>
+        <p class="product-discription">This is a short description of the product.
+          It's a great product that solves many problems</p>
+        <p class="product-price">$63.99</p>
+        <a href="#" class="buy-button">Buy Now</a>
+      </div>
+    </div>
+  </div>
+ </div>
+
+   <!-- This is a footer section  -->
+<footer>
+  <div class="footer">
+    <div class="footer1">
+      <h4>HELP</h4>
+      <p>Support us</p>
+      <p>FAQ's</p>
+      <p>Terms and conditions</p>
+      <p>Privacy policy</p>
+    </div>
+    <div class="footer2">
+      <h4>COMPANY</h4>
+      <p><a href="/" >Home</a></p>
+      <p><a href="/contact.html" >Contact</a></p>
+      <p><a href="/Product.html" >Product</a></p>
+      <p><a href="/about.html">About</a></p>
+  </div>
+  
+    <div class="footer3">
+      <h4>SOCIAL MEDIA</h4>
+      <div class="ftr1" style="padding-bottom: 15px">
+        <img
+          class="icn icnFb"
+          src="./img/facebook-logo.png"
+          height="25"
+          alt="facebook"
+        />
+        <img
+          class="icn icnIg"
+          src="./img/instagram-logo.png"
+          height="25"
+          alt="instagram"
+        />
+        <img
+          class="icn icnTw"
+          src="./img/twitter-logo.png"
+          height="25"
+          alt="twitter"
+        />
+      </div>
+      <div class="ftr2">
+        <img src="./img/logo.png" height="40" alt="footerLogo" />
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
