--- a/index.html
+++ b/index.html
@@ -37,113 +37,78 @@
   </header>
 
 
-  <!-- hero section -->
+  <!-- hero section / 1st -->
   <div class="main">
-    <section class="main1 section">
+    <section class="main1 section2">
       <div class="carousel">
-        <img src="./img/heroProduct.png" id="carouselImage" class="heroProduct" alt="heroProduct" />
-      </div>
-      <div class="carousel-controls">
-        <button id="prevBtn" class="carousel-btn"><</button>
-        <button id="nextBtn" class="carousel-btn">></button>
+        <img src="./img/heroProduct.png" id="carouselImage" class="heroProduct" alt="hero product" />
+        <div class="carousel-controls">
+          <button id="prevBtn" class="carousel-btn"><</button>
+              <button id="nextBtn" class="carousel-btn">></button>
+        </div>
       </div>
       <div class="s2_details">
+        <h2>Boat USA R</h2>
+        <p class="s2_detailsP">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+          laborum quia, esse error odio, eos inventore necessitatibus totam
+          maxime cupiditate exercitationem saepe, maiores sunt harum
+          voluptatem nulla ea laudantium ut? Tempora voluptas at voluptatum
+          quia deserunt? Earum maiores nihil eveniet rerum animi, tempore quae
+          aliquid? Laudantium, aspernatur sit ullam doloribus impedit, dolores
+          omnis beatae accusamus est atque labore commodi nostrum corporis
+          ipsum enim eum ex! Sit nihil doloribus quae. Iure sunt recusandae
+          quasi aliquam excepturi repellat esse saepe eveniet, fuga porro,
+          enim non consequatur similique nihil incidunt.
+        </p>
+      
       </div>
-      <h2>Boat USA R</h2>
-      <p class="s2_detailsP">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos sunt, explicabo quia quis magni, id, veniam aut
-        similique tempore laboriosam aspernatur. Officia, enim deserunt doloribus, voluptatem perferendis ipsa et
-        officiis a praesentium ex delectus.
-      </p>
-
-
     </section>
   </div>
-  <!-- 2nd section -->
+
+
+  <!-- 2nd section  -->
+
   <section class="main1 section3">
     <div class="section3_d1">
-      <h3 style="color: #751605;">Categories </h3>
-      <h1 style="color: white;">
-        Enhance Your <br>
+      <h3 style="color: #0056b3">categories</h3>
+      <h1 style="color: white">
+        Enhance Your <br />
         Music Experience
       </h1>
-      <img src="./img/Frame 601.png" width="250" alt="Frame">
-      <button>Buy Now</button>
+      <img src="./img/Frame 601.png" width="250" alt="frame" />
+      <button>Buy now</button>
     </div>
     <div class="section3_d2">
-      <img src="./img/speaker.png" alt="speaker">
+      <img src="./img/speaker.png" alt="speaker" />
     </div>
   </section>
-  <!-- 3rd section -->
+
+
+  <!-- 3rd section  -->
   <section class="main1 section1">
     <div class="section1_prdt">
-      <img src="./img/headphone3.png" width="450px" class="heroProduct" alt="hero Product" />
+      <img src="./img/headphone3.png" width="450px" height="450px" class="heroProduct" alt="hero product" />
       <div class="price">
-        <h3>Boat 55px</h3>
-        <p>$222</p>
-        <div class="btnprice">
+        <h3>Boat 55PX</h3>
+        <p>$115</p>
+        <div class="btnPrice">
           <button class="order">order</button>
           <button class="cart">cart</button>
         </div>
       </div>
-      <p class="s1productDetails">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quaerat assumenda
-        illum deserunt, dignissimos minima laborum ipsam architecto similique non quis et itaque, accusantium at,
-        quibusdam ullam incidunt nam sapiente?</p>
     </div>
+    <p class="s1ProductDetails">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex fugit
+      voluptates dolores natus harum facilis sequi. Inventore odio iure
+      molestias, corrupti odit libero necessitatibus fugiat. Magnam
+      consequatur nulla dolor impedit veritatis? Aliquam, impedit nemo natus
+      sit voluptas atque sunt soluta asperiores nisi laboriosam voluptates
+      cumque
+    </p>
   </section>
-  <!-- card section start -->
- <div class="cardtry">
-  <div class="ecard">
-    <div class="card">
-      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
-      <div class="product-details">
-        <h2 class="product-title">Product Name</h2>
-        <p class="product-discription">This is a short description of the product.
-          It's a great product that solves many problems</p>
-        <p class="product-price">$63.99</p>
-        <a href="#" class="buy-button">Buy Now</a>
-      </div>
-    </div>
   </div>
 
-  <div class="ecard">
-    <div class="card">
-      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
-      <div class="product-details">
-        <h2 class="product-title">Product Name</h2>
-        <p class="product-discription">This is a short description of the product.
-          It's a great product that solves many problems</p>
-        <p class="product-price">$63.99</p>
-        <a href="#" class="buy-button">Buy Now</a>
-      </div>
-    </div>
-  </div>
-  <div class="ecard">
-    <div class="card">
-      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
-      <div class="product-details">
-        <h2 class="product-title">Product Name</h2>
-        <p class="product-discription">This is a short description of the product.
-          It's a great product that solves many problems</p>
-        <p class="product-price">$63.99</p>
-        <a href="#" class="buy-button">Buy Now</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="ecard">
-    <div class="card">
-      <img src="./img/headphone4.jpg" alt="Product image" class="product-image">
-      <div class="product-details">
-        <h2 class="product-title">Product Name</h2>
-        <p class="product-discription">This is a short description of the product.
-          It's a great product that solves many problems</p>
-        <p class="product-price">$63.99</p>
-        <a href="#" class="buy-button">Buy Now</a>
-      </div>
-    </div>
-  </div>
- </div>
 
    <!-- This is a footer section  -->
 <footer>
