made login and signup page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <div class="carousel">
         <img src="./img/heroProduct.png" id="carouselImage" class="heroProduct" alt="hero product" />
         <div class="carousel-controls">
-          <button id="prevBtn" class="carousel-btn"><</button>
+          <button id="prevBtn" class="carousel-btn">
+            << /button>
               <button id="nextBtn" class="carousel-btn">></button>
         </div>
       </div>
@@ -61,7 +62,7 @@
           quasi aliquam excepturi repellat esse saepe eveniet, fuga porro,
           enim non consequatur similique nihil incidunt.
         </p>
-      
+
       </div>
     </section>
   </div>
@@ -108,54 +109,61 @@
     </p>
   </section>
   </div>
-
-
-   <!-- This is a footer section  -->
-<footer>
-  <div class="footer">
-    <div class="footer1">
-      <h4>HELP</h4>
-      <p>Support us</p>
-      <p>FAQ's</p>
-      <p>Terms and conditions</p>
-      <p>Privacy policy</p>
-    </div>
-    <div class="footer2">
-      <h4>COMPANY</h4>
-      <p><a href="/" >Home</a></p>
-      <p><a href="/contact.html" >Contact</a></p>
-      <p><a href="/Product.html" >Product</a></p>
-      <p><a href="/about.html">About</a></p>
-  </div>
-  
-    <div class="footer3">
-      <h4>SOCIAL MEDIA</h4>
-      <div class="ftr1" style="padding-bottom: 15px">
-        <img
-          class="icn icnFb"
-          src="./img/facebook-logo.png"
-          height="25"
-          alt="facebook"
-        />
-        <img
-          class="icn icnIg"
-          src="./img/instagram-logo.png"
-          height="25"
-          alt="instagram"
-        />
-        <img
-          class="icn icnTw"
-          src="./img/twitter-logo.png"
-          height="25"
-          alt="twitter"
-        />
-      </div>
-      <div class="ftr2">
-        <img src="./img/logo.png" height="40" alt="footerLogo" />
-      </div>
+  <div class="ecard">
+  <div class="card">
+    <img src="./img/headphone5.jpg" alt="Product Image" class="product-image">
+    <div class="product-details">
+      <h2 class="product-title">Product Name</h2>
+      <p class="product-description">This is a short description of the product. It's a great product that solves many
+        problems.</p>
+      <p class="product-price">$49.99</p>
+      <a href="#" class="buy-button">Buy Now</a>
     </div>
   </div>
-</footer>
+
+ <div class="card">
+  <img src="./img/headphone5.jpg" alt="Product Image" class="product-image">
+  <div class="product-details">
+    <h2 class="product-title">Product Name</h2>
+    <p class="product-description">This is a short description of the product. It's a great product that solves many
+      problems.</p>
+    <p class="product-price">$49.99</p>
+    <a href="#" class="buy-button">Buy Now</a>
+  </div>
+</div>
+</div>
+
+  <!-- This is a footer section  -->
+  <footer>
+    <div class="footer">
+      <div class="footer1">
+        <h4>HELP</h4>
+        <p>Support us</p>
+        <p>FAQ's</p>
+        <p>Terms and conditions</p>
+        <p>Privacy policy</p>
+      </div>
+      <div class="footer2">
+        <h4>COMPANY</h4>
+        <p><a href="/">Home</a></p>
+        <p><a href="/contact.html">Contact</a></p>
+        <p><a href="/Product.html">Product</a></p>
+        <p><a href="/about.html">About</a></p>
+      </div>
+
+      <div class="footer3">
+        <h4>SOCIAL MEDIA</h4>
+        <div class="ftr1" style="padding-bottom: 15px">
+          <img class="icn icnFb" src="./img/facebook-logo.png" height="25" alt="facebook" />
+          <img class="icn icnIg" src="./img/instagram-logo.png" height="25" alt="instagram" />
+          <img class="icn icnTw" src="./img/twitter-logo.png" height="25" alt="twitter" />
+        </div>
+        <div class="ftr2">
+          <img src="./img/logo.png" height="40" alt="footerLogo" />
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
