--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <!-- This is  a header section  -->
@@ -32,6 +33,24 @@
       </ul>
     </nav>
   </header>
+  
+  <!-- our product  -->
+  <h1 style="margin-left: 10%;">Our Products</h1>
+    
+  <!-- cart section start  -->
+   <!-- 1st line -->
+  <div class="ecard">
+  
+   <div class="card">
+     <img src="./img/headphone5.jpg" alt="Product Image" class="product-image">
+     <div class="product-details">
+         <h2 class="product-title">Product Name</h2>
+         <p class="product-description">This is a short description of the product. It's a great product that solves many problems.</p>
+         <p class="product-price">$49.99</p>
+         <a href="#" class="buy-button">Buy Now</a>
+     </div>
+  </div>
+  
 
 </body>
 </html>
