made sign up and login page

--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
     </header>
     <div class="about-page">
         <div class="about-container">
+            <h2>About youth IT</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur blanditiis explicabo sunt
                 reiciendis? Laboriosam quasi nihil facilis architecto beatae voluptates, fugit ipsum obcaecati porro
@@ -58,7 +59,10 @@
 
             <h3>Contact us</h3>
             <p>
-                <strong>YOUTH IT</strong> 
+                <strong>YOUTH IT</strong> <br>
+                Address:bansbari,Morang,Nepal <br>
+                phone:+977 1234567890 <br>
+                Email: contact@youthit.com
             </p>
         </div>
     </div>
