--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
       <div class="carousel">
         <img src="./img/heroProduct.png" id="carouselImage" class="heroProduct" alt="hero product" />
         <div class="carousel-controls">
-          <button id="prevBtn" class="carousel-btn">
-            << /button>
+          <button id="prevBtn" class="carousel-btn"><</button>
               <button id="nextBtn" class="carousel-btn">></button>
         </div>
       </div>
@@ -109,6 +108,8 @@
     </p>
   </section>
   </div>
+
+  <!-- card section -->
   <div class="ecard">
   <div class="card">
     <img src="./img/headphone5.jpg" alt="Product Image" class="product-image">
@@ -122,15 +123,38 @@
   </div>
 
  <div class="card">
-  <img src="./img/headphone5.jpg" alt="Product Image" class="product-image">
+  <img src="./img/headphone6.jpg" alt="Product Image" class="product-image">
   <div class="product-details">
     <h2 class="product-title">Product Name</h2>
     <p class="product-description">This is a short description of the product. It's a great product that solves many
       problems.</p>
-    <p class="product-price">$49.99</p>
+    <p class="product-price">$149.99</p>
     <a href="#" class="buy-button">Buy Now</a>
   </div>
 </div>
+
+<div class="card">
+  <img src="./img/headphone7.jpg" alt="Product Image" class="product-image">
+  <div class="product-details">
+    <h2 class="product-title">Product Name</h2>
+    <p class="product-description">This is a short description of the product. It's a great product that solves many
+      problems.</p>
+    <p class="product-price">$249.99</p>
+    <a href="#" class="buy-button">Buy Now</a>
+  </div>
+</div>
+
+<div class="card">
+  <img src="./img/headphone8.jpg" alt="Product Image" class="product-image">
+  <div class="product-details">
+    <h2 class="product-title">Product Name</h2>
+    <p class="product-description">This is a short description of the product. It's a great product that solves many
+      problems.</p>
+    <p class="product-price">$349.99</p>
+    <a href="#" class="buy-button">Buy Now</a>
+  </div>
+</div>
+
 </div>
 
   <!-- This is a footer section  -->
